--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -12,5 +12,7 @@
     "/js/Slides.js": "/js/Slides.js",
     "/js/Icon.js": "/js/Icon.js",
     "/js/User.js": "/js/User.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/FoodSlideCreate.js": "/js/FoodSlideCreate.js",
+    "/js/FoodSlideEdit.js": "/js/FoodSlideEdit.js"
 }
