--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -13,5 +13,10 @@
     "/js/FoodSlideCreate.js": "/js/FoodSlideCreate.js",
     "/js/FoodSlideEdit.js": "/js/FoodSlideEdit.js",
     "/js/User.js": "/js/User.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/BlogAllData.js": "/js/BlogAllData.js",
+    "/js/BlogEdit.js": "/js/BlogEdit.js",
+    "/js/blogAllData.js": "/js/blogAllData.js",
+    "/js/BlogCreate.js": "/js/BlogCreate.js",
+    "/js/Blog.js": "/js/Blog.js"
 }
