--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,7 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/js/home.js": "/js/home.js",
     "/js/Categories.js": "/js/Categories.js",
-    "/js/userAllData.js": "/js/userAllData.js",
+    "/js/blogAllData.js": "/js/blogAllData.js",
     "/js/ProductCreate.js": "/js/ProductCreate.js",
     "/js/ProductEdit.js": "/js/ProductEdit.js",
     "/js/Product.js": "/js/Product.js",
@@ -12,11 +12,9 @@
     "/js/Slides.js": "/js/Slides.js",
     "/js/FoodSlideCreate.js": "/js/FoodSlideCreate.js",
     "/js/FoodSlideEdit.js": "/js/FoodSlideEdit.js",
-    "/js/User.js": "/js/User.js",
-    "/css/app.css": "/css/app.css",
-    "/js/BlogAllData.js": "/js/BlogAllData.js",
-    "/js/BlogEdit.js": "/js/BlogEdit.js",
-    "/js/blogAllData.js": "/js/blogAllData.js",
     "/js/BlogCreate.js": "/js/BlogCreate.js",
-    "/js/Blog.js": "/js/Blog.js"
+    "/js/BlogEdit.js": "/js/BlogEdit.js",
+    "/js/Blog.js": "/js/Blog.js",
+    "/js/User.js": "/js/User.js",
+    "/css/app.css": "/css/app.css"
 }
