--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -16,5 +16,6 @@
     "/js/BlogEdit.js": "/js/BlogEdit.js",
     "/js/Blog.js": "/js/Blog.js",
     "/js/User.js": "/js/User.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/productPriority.js": "/js/productPriority.js"
 }
