--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/js/home.js": "/js/home.js",
     "/js/Categories.js": "/js/Categories.js",
+    "/js/productPriority.js": "/js/productPriority.js",
     "/js/blogAllData.js": "/js/blogAllData.js",
     "/js/ProductCreate.js": "/js/ProductCreate.js",
     "/js/ProductEdit.js": "/js/ProductEdit.js",
@@ -16,6 +17,5 @@
     "/js/BlogEdit.js": "/js/BlogEdit.js",
     "/js/Blog.js": "/js/Blog.js",
     "/js/User.js": "/js/User.js",
-    "/css/app.css": "/css/app.css",
-    "/js/productPriority.js": "/js/productPriority.js"
+    "/css/app.css": "/css/app.css"
 }
